chore: change endpoint name
